--- a/contact.html
+++ b/contact.html
@@ -6,15 +6,15 @@
 <!--[if IE 9 ]>    <html class="ie9"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html class="" lang="en"> <!--<![endif]-->
 <head>
-    <title>Goodness Toluwanimi Kayode - Push A Message To Me</title>
+    <title>Goodness Kayode - Push A Message To Me</title>
 
 
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <meta name="description" content="The portfolio of Goodness Toluwanimi Kayode. A pusher of codes,Nigeria, software developer based is Nigeria" />
-    <meta name="keywords" content="Goodness Toluwanimi Kayode, Goodness Kayode,pusher of codes,software developer, mobile development,ruby,php, websites,AI,ML,python,java,android,reactjs, react native,laravel nigeria, codeigniter, freelance, developer" />
+    <meta name="description" content="The portfolio of Goodness Kayode. A pusher of codes,Nigeria, software developer based is Nigeria" />
+    <meta name="keywords" content="Goodness Kayode, Goodness Kayode,pusher of codes,software developer, mobile development,ruby,php, websites,AI,ML,python,java,android,reactjs, react native,laravel nigeria, codeigniter, freelance, developer" />
     <meta name="robots" content="index, follow" />
 
     <link rel="shortcut icon" href="favicon.ico">
@@ -173,7 +173,7 @@
         <div class="row">
 
             <div class="col-md-12">
-                <p>© 2017 <a href="index.html">Goodness Toluwanimi Kayode</a>. Pusher of Codes.</p>
+                <p>© 2017 <a href="index.html">Goodness Kayode</a>. Pusher of Codes.</p>
             </div>
 
         </div>
