--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 <!--[if IE 9 ]>    <html class="ie9"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html class="" lang="en"> <!--<![endif]-->
 <head>
-    <title>Goodness Toluwanimi Kayode - A Software Developer &amp; Pusher of Codes</title>
+    <title>Goodness Kayode - A Software Developer &amp; Pusher of Codes</title>
 
 
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <meta name="description" content="The portfolio of Goodness Toluwanimi Kayode. A pusher of codes, software developer based is Nigeria" />
-    <meta name="keywords" content="Goodness Toluwanimi Kayode, Goodness Kayode,pusher of codes,software developer,Nigeria, mobile development,ruby,php, websites,AI,ML,python,java,android,reactjs, react native,laravel nigeria, codeigniter, freelance, developer" />
+    <meta name="description" content="The portfolio of Goodness Kayode. A pusher of codes, software developer based is Nigeria" />
+    <meta name="keywords" content="Goodness Kayode,pusher of codes,software developer,Nigeria, mobile development,ruby,php, websites,AI,ML,python,java,android,reactjs, react native,laravel nigeria, codeigniter, freelance, developer" />
     <meta name="robots" content="index, follow" />
 
     <link rel="shortcut icon" href="favicon.ico">
@@ -93,7 +93,7 @@
 
                                 <h2 style="font-weight:bold; color: black" class="im-sean text-center col-md-12 col-md-offset-4">
 
-                                    I'm Goodness Toluwanimi Kayode
+                                    I'm Goodness Kayode
 
                                 </h2>
                                 <br>
@@ -144,7 +144,7 @@
 
                     <figure>
 
-                        <img src="assets/img/me.png" alt="Goodness Toluwanimi Kayode | Pusher Of CODOES | Software Developer From Nigeria" >
+                        <img src="assets/img/me.png" alt="Goodness Kayode | Pusher Of CODOES | Software Developer From Nigeria" >
 
                     </figure>
 
@@ -211,7 +211,7 @@
 
                                 <figure>
 
-                                    <img src="assets/img/me.png" alt="Goodness Toluwanimi Kayode | Pusher Of CODOES | Software Developer From Nigeria">
+                                    <img src="assets/img/me.png" alt="Goodness Kayode | Pusher Of CODOES | Software Developer From Nigeria">
 
                                 </figure>
 
@@ -286,7 +286,7 @@
 
                                 <figure>
 
-                                    <img src="assets/img/me.png" alt="Goodness Toluwanimi Kayode | Pusher Of CODOES | Software Developer From Nigeria">
+                                    <img src="assets/img/me.png" alt="Goodness Kayode | Pusher Of CODES | Software Developer From Nigeria">
 
                                 </figure>
 
@@ -412,7 +412,7 @@
         <div class="row">
 
             <div class="col-md-12">
-                <p>© 2017 <a href="index.html">Goodness Toluwanimi Kayode</a>. Pusher of Codes.</p>
+                <p>© 2017 <a href="index.html">Goodness Kayode</a>. Pusher of Codes.</p>
             </div>
 
         </div>
