--- a/work.html
+++ b/work.html
@@ -6,15 +6,15 @@
 <!--[if IE 9 ]>    <html class="ie9"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html class="" lang="en"> <!--<![endif]-->
 <head>
-    <title>Goodness Toluwanimi Kayode - Works</title>
+    <title>Goodness Kayode - Projects</title>
 
 
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <meta name="description" content="The portfolio of Goodness Toluwanimi Kayode. A pusher of codes, software developer based is Nigeria" />
-    <meta name="keywords" content="Goodness Toluwanimi Kayode, Goodness Kayode,pusher of codes,software developer, Nigeria,mobile development,ruby,php, websites,AI,ML,python,java,android,reactjs, react native,laravel nigeria, codeigniter, freelance, developer" />
+    <meta name="description" content="The portfolio of Goodness Kayode. A pusher of codes, software developer based is Nigeria" />
+    <meta name="keywords" content="Goodness Kayode,pusher of codes,software developer, Nigeria,mobile development,ruby,php, websites,AI,ML,python,java,android,reactjs, react native,laravel nigeria, codeigniter, freelance, developer" />
     <meta name="robots" content="index, follow" />
 
     <link rel="shortcut icon" href="favicon.ico">
@@ -243,7 +243,7 @@
 
 
                     <p>
-                        I have been able to work on some couple of video tutorials on Youtube and I have over 5000+ views. More tutorials are still coming but please do well to check my
+                        I have been able to work on some couple of video tutorials on Youtube and I have over 30000+ views. More tutorials are still coming but please do well to check my
                         tutorials out and subscribe to my channel.
                     </p>
 
@@ -403,7 +403,7 @@
         <div class="row">
 
             <div class="col-md-12">
-                <p>© 2017 <a href="index.html">Goodness Toluwanimi Kayode</a>. Pusher of Codes.</p>
+                <p>© 2017 <a href="index.html">Goodness Kayode</a>. Pusher of Codes.</p>
             </div>
 
         </div>
